# chat

./: .directory  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: rust.yml
.sqlx/: query-045473cd54ddd58b05235e067ae90c8030ab642b2b40b11e320d602c56906454.json  query-2f093682aac9f1584451624a26d71f215f27a39d7cc72b7baaba0f552b438929.json  query-31982f0eb441c658f06f4e0b85150bccbe5b73c3145829c18eea4ace365fe301.json  query-37c2db8771a9b1dcea507f8afc72f43ef075f65567042a8eb1eb59d27db32ded.json  query-39e8fde5df56b0b7c78345de646e2cf390b0175dc5ea7fa9d9748fd32e29232e.json  query-4e3d410b08763b79c5acaee5aa716140aa61fd6ad726549d240c48eed16a88f6.json  query-4f400dfb25e39dd4cb30ff71ed0f5c52e3edd048b935e2762599c398af76264b.json  query-53592bd3012617c094cf086186b9a39785147de4e1d3c1d170cf0031606cdcb4.json  query-5b43e57dd2a10bdb091056852edcef24d3c23b183a1c330af85c2b02e0e164db.json  query-5d7bc6bd8805058a40ef0f00becd280c8c7bda6fe35434c1ae6dd4f163ee3b78.json  query-86112aac62e1fce3b32eaf673ca36482a1b6225369d898a02c13382ea0664d1b.json  query-a1fbaac7941f8dc321c32e36f8caf2fec098f23317cc20bce9f8847a624c24e7.json  query-a2d646b9c356ebd73401cd30898c711b3b4a30df1d4b840decfe3917c5f5e4eb.json  query-a5014e723135181f3986c1e8e8d7c794b5be681a3073edce0b9f4964b0021bcd.json  query-ad6808da65093adef5b2535f55a6f610612ee44800b157abf2afbb17cbc0ef60.json  query-b337dd7b9dc64405d3c31b50343e7d6817d1ae08f2a4efeac6590c6119b067f4.json  query-b621a0fadcbee2c113143dd975e10c3d534f2cb4140c3282c385afe467aa02dd.json  query-c7c9477df9bed741f9404aa8312f3abc5332224f0e9252ce42cdd88e824b6853.json  query-df1a91f6044cfde859a8530888ca6eb808bd0e6764d4493adc808a587bdba605.json  query-e5694408457e0028aa07f60a77f7bafb305c0a1e0bd35680ceba8506463cd3c3.json  query-ed82e3e1c3605ccb73f7c33b59002f0d606d8030ca55d6d5bd7a88809fc2b4a2.json  query-f895d442c658bcf9634c8b1188857dc104451a1579523e93ac87982decfd4c48.json
backend/: Cargo.toml  Dockerfile  sqlx-data.json
backend/migrations/: 20230514192652_secrets_last_changed.sql  20230514193424_remove_schema_info.sql
backend/src/: macros.rs  main.rs
backend/src/gateway/: handler.rs
backend/src/models/: appstate.rs  attachment.rs  auth.rs  bucket.rs  channel.rs  db.rs  errors.rs  gateway_event.rs  guild.rs  member.rs  message.rs  mod.rs  prefs.rs  rejections.rs  rest.rs  snowflake.rs  user.rs
backend/src/rest/: auth.rs  mod.rs  rejections.rs  routes.rs
backend/src/rest/routes/: channels.rs  common.rs  guilds.rs  mod.rs  prefs.rs  users.rs
backend/src/utils/: traits.rs
backend/static/db/: schema.sql
doc/src/: changelog.md
doc/src/gateway/: events.md  home.md
doc/src/objects/: attachment.md  guild.md  message.md  prefs.md  user.md
doc/src/rest/: channels.md  guilds.md  home.md  users.md
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/static/: index.html  login.html  register.html
frontend/static/styles/: input.css  login.css  main.css
src/: macros.rs  main.rs
src/gateway/: handler.rs
src/models/: appstate.rs  attachment.rs  auth.rs  bucket.rs  channel.rs  data_uri.rs  datauri.rs  db.rs  errors.rs  gateway_event.rs  guild.rs  member.rs  message.rs  mod.rs  prefs.rs  rejections.rs  requests.rs  rest.rs  snowflake.rs  socket_event.rs  user.rs
src/models/db/: channels.rs  database.rs  guilds.rs  messages.rs  mod.rs  users.rs
src/models/state/: appstate.rs  ops.rs
src/rest/: auth.rs  mod.rs  rejections.rs  routes.rs
src/rest/routes/: channels.rs  common.rs  guilds.rs  prefs.rs  users.rs
src/utils/: join_handle.rs
static/: index.html
static/db/: schema.sql
