[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["macros", "migrate", "sqlx-macros", "postgres", "runtime-tokio-rustls"] }
serde_json = "1.0"
warp = "0.3.5"
futures-util = "0.3.28"
anyhow = "1.0.44"
tokio-stream = "0.1.14"
lazy_static = "1.4.0"
jsonwebtoken = "8"
chrono = "0.4.24"
rs-snowflake = "0.6.0"
dotenv = "0.15.0"
async-trait = "0.1.68"

[profile.dev.package.sqlx-macros]
opt-level = 3