[package]
name = "chat-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "parking_lot", "tracing"] }
axum = { version = "0.7", features = ["ws", "multipart", "tracing"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "macros",
    "migrate",
    "sqlx-macros",
    "postgres",
    "runtime-tokio-rustls",
] }
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "std",
    "clock",
] }
tower-http = { version = "0.5", features = ["limit", "cors", "trace"] }
secrecy = { version = "0.8", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
bitflags = { version = "2.4", features = ["serde"] }
http = "1.1.0"
aws-config = "1.1.9"
aws-sdk-s3 = "1.21"
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
lazy_static = "1.4"
jsonwebtoken = "9.3"
rs-snowflake = "0.6"
dotenvy = "0.15"
async-trait = "0.1"
rand = "0.8"
regex = "1.8"
tracing = "0.1"
tracing-subscriber = "0.3"
enum_dispatch = "0.3"
derive_builder = "0.20"
slice-group-by = "0.3"
thiserror = "1.0"
bytes = "1.4"
mime = "0.3"
dashmap = "5.5"
color-eyre = "0.6"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3

# Enable incremental compilation for dev builds to improve re-compilation time.
[profile.dev]
incremental = true

# Enable LTO for release builds to reduce binary size.
[profile.release]
lto = true
