[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full", "parking_lot", "tracing"] }
serde = { version = "1.0.130", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["macros", "migrate", "sqlx-macros", "postgres", "runtime-tokio-rustls", "offline"] }
chrono = { version = "0.4.24", default-features = false, features = ["alloc", "std", "clock"] }
secrecy = { version = "0.8.0", features = ["serde"] }
argon2 = { version = "0.5.0", features= ["std"] }
aws-config = "0.56.0"
aws-sdk-s3 = "0.29.0"
serde_json = "1.0"
warp = { git = "https://github.com/seanmonstar/warp.git", rev = "149913fed948bbe2149b52b9016170bcaef950ab" }
futures = "0.3.28"
futures-util = "0.3.28"
anyhow = "1.0.44"
tokio-stream = "0.1.14"
lazy_static = "1.4.0"
jsonwebtoken = "8"
rs-snowflake = "0.6.0"
dotenv = "0.15.0"
async-trait = "0.1.68"
rand = "0.8.5"
regex = "1.8.1"
governor = "0.5.1"
nonzero_ext = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
enum_dispatch = "0.3.11"
derive_builder = "0.12.0"
slice-group-by = "0.3.1"
thiserror = "1.0.44"
bytes = "1.4.0"
mime = "0.3.17"